@@ -37,7 +37,7 @@ import com.duom.ardamaps.core.data.map.cameras.PmTilesMapCamera;
 import com.duom.ardamaps.gui.map.rendering.*;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
-import net.minecraft.client.font.TextRenderer;
+import net.minecraft.client.gui.Font;
 import org.jetbrains.annotations.Nullable;
 
 /**
@@ -114,7 +114,7 @@ public class MapLayerLoader {
         if (selectedDimension == null || !selectedDimension.hasRanges()) return null;
 
         return playerY == null
-                ? selectedDimension.getExplorationRanges().get(0)
+                ? selectedDimension.getExplorationRanges().getFirst()
                 : selectedDimension.rangeForY(playerY);
     }
 
@@ -172,6 +172,7 @@ public class MapLayerLoader {
             int startingCameraX,
             int startingCameraZ,
             @Nullable Double playerY,
-            TextRenderer textRenderer) {
+            Font textRenderer) {
+
     }
 }
