@@ -28,16 +28,18 @@ package com.duom.ardamaps.gui.widgets;
 import com.duom.ardamaps.gui.ModConstants;
 import com.duom.ardamaps.gui.screens.ArdaMapsScreen;
 import lombok.Setter;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.gui.tooltip.HoveredTooltipPositioner;
-import net.minecraft.client.gui.widget.ButtonWidget;
-import net.minecraft.client.gui.widget.TextWidget;
-import net.minecraft.text.MutableText;
-import net.minecraft.text.OrderedText;
-import net.minecraft.text.Text;
+import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.client.gui.components.Button;
+import net.minecraft.client.gui.components.StringWidget;
+import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.gui.screens.inventory.tooltip.DefaultTooltipPositioner;
+import net.minecraft.client.input.KeyEvent;
+import net.minecraft.client.input.MouseButtonEvent;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.util.FormattedCharSequence;
+import org.jspecify.annotations.NonNull;
 import org.lwjgl.glfw.GLFW;
 
 import java.util.*;
@@ -60,6 +62,15 @@ public class SearchWidget extends Screen {
     /** Maximum tooltip width before wrapping to multiple lines. */
     private static final int TOOLTIP_MAX_WIDTH = 220;
 
+    /** Rendered result elements currently attached to this screen. */
+    private final List<GuiEventListener> searchResults;
+
+    /** Tooltip text associated with each rendered result button. */
+    private final Map<Button, Component> resultTooltips;
+
+    /** Parent screen rendered underneath this overlay. */
+    private final ArdaMapsScreen parent;
+
     /** Maps a result object to the label shown in the results list. */
     private Function<Object, String> elementAsString;
 
@@ -77,15 +88,6 @@ public class SearchWidget extends Screen {
     /** Editable text field used to enter the search query. */
     private SimpleTextFieldWidget searchField;
 
-    /** Rendered result elements currently attached to this screen. */
-    private final List<Element> searchResults;
-
-    /** Tooltip text associated with each rendered result button. */
-    private final Map<ButtonWidget, Text> resultTooltips;
-
-    /** Parent screen rendered underneath this overlay. */
-    private final ArdaMapsScreen parent;
-
     /** Last query processed, used to avoid redundant recalculation. */
     private String cachedSearchString;
 
@@ -96,7 +98,7 @@ public class SearchWidget extends Screen {
      */
     public SearchWidget(ArdaMapsScreen parent) {
 
-        super(Text.translatable("ardamaps.client.generic.search"));
+        super(Component.translatable("ardamaps.client.generic.search"));
 
         this.parent = parent;
         this.searchResults = new ArrayList<>();
@@ -114,23 +116,23 @@ public class SearchWidget extends Screen {
         var x = (parent.width / 2) - (ModConstants.BUTTON_WIDTH);
         var y = (parent.height / 2) - (ModConstants.BUTTON_HEIGHT / 2);
 
-        this.searchField = new SimpleTextFieldWidget(textRenderer, x, y, ModConstants.BUTTON_WIDTH * 2, ModConstants.SMALL_SQUARED_BUTTON_SIZE, Text.empty());
-        this.searchField.setPlaceholder(Text.translatable("ardamaps.client.generic.search"));
-        this.searchField.setChangedListener(this::onSearchChanged);
+        this.searchField = new SimpleTextFieldWidget(font, x, y, ModConstants.BUTTON_WIDTH * 2, ModConstants.SMALL_SQUARED_BUTTON_SIZE, Component.empty());
+        this.searchField.setHint(Component.translatable("ardamaps.client.generic.search"));
+        this.searchField.setResponder(this::onSearchChanged);
 
-        addDrawableChild(ButtonWidget.builder(Text.literal("X"),
-                        (buttonWidget) -> close())
+        addRenderableWidget(Button.builder(Component.literal("X"),
+                        (_) -> onClose())
                 .size(ModConstants.SMALL_SQUARED_BUTTON_SIZE, ModConstants.SMALL_SQUARED_BUTTON_SIZE)
-                .position(width - ModConstants.SMALL_SQUARED_BUTTON_SIZE - 10, 10)
+                .pos(width - ModConstants.SMALL_SQUARED_BUTTON_SIZE - 10, 10)
                 .build());
 
-        var title = new TextWidget(Text.translatable("ardamaps.client.generic.search"), textRenderer);
+        var title = new StringWidget(Component.translatable("ardamaps.client.generic.search"), font);
         title.setPosition(x, y - ModConstants.BUTTON_HEIGHT / 2);
 
-        addDrawableChild(title);
-        addDrawableChild(searchField);
+        addRenderableWidget(title);
+        addRenderableWidget(searchField);
 
-        this.focusOn(searchField);
+        this.setInitialFocus(searchField);
     }
 
     /**
@@ -147,14 +149,14 @@ public class SearchWidget extends Screen {
 
         // Exit fast if fewer than 2 characters
         if (searchString == null || searchString.length() < 2) {
-            this.searchResults.forEach(this::remove);
+            this.searchResults.forEach(this::removeWidget);
             this.searchResults.clear();
             this.resultTooltips.clear();
             return;
         }
 
         List<?> foundElements = this.searchFunction.apply(searchString);
-        this.searchResults.forEach(this::remove);
+        this.searchResults.forEach(this::removeWidget);
         this.searchResults.clear();
         this.resultTooltips.clear();
 
@@ -169,7 +171,7 @@ public class SearchWidget extends Screen {
             int maxChars = (ModConstants.BUTTON_WIDTH * 2) / 6;
             elementString = ellipseAroundMatch(elementString, searchString, maxChars);
 
-            MutableText text = buildHighlightedText(elementString, searchString, ModConstants.COLOR_BLUE_EMPHASIZED);
+            MutableComponent text = buildHighlightedText(elementString, searchString, ModConstants.COLOR_BLUE_EMPHASIZED);
 
             var resultButton = buildSearchResultButton(text, element, resultIndex);
             if (elementAsTooltip != null) {
@@ -179,22 +181,31 @@ public class SearchWidget extends Screen {
                 }
             }
             this.searchResults.add(resultButton);
-            addDrawableChild(resultButton);
+            addRenderableWidget(resultButton);
 
             resultIndex++;
         }
 
         if (foundElements.size() > MAX_RESULTS) {
 
-            var moreElementsTextWidget = new TextWidget(Text.literal("..."), textRenderer);
+            var moreElementsTextWidget = new StringWidget(Component.literal("..."), font);
 
             var xPosition = width / 2 - moreElementsTextWidget.getWidth() / 2;
             var yPosition = searchField.getY() + 5 + resultIndex * ModConstants.SMALL_SQUARED_BUTTON_SIZE;
 
             moreElementsTextWidget.setPosition(xPosition, yPosition);
             this.searchResults.add(moreElementsTextWidget);
-            addDrawableChild(moreElementsTextWidget);
+            addRenderableWidget(moreElementsTextWidget);
         }
+    }
+
+    /**
+     * Closes this overlay and restores the parent screen.
+     */
+    @Override
+    public void onClose() {
+
+        this.minecraft.setScreen(parent);
     }
 
     /**
@@ -226,6 +237,35 @@ public class SearchWidget extends Screen {
     }
 
     /**
+     * Builds text where each occurrence of {@code searchString} in {@code source}
+     * is highlighted with the provided colour.
+     */
+    @SuppressWarnings("SameParameterValue")
+    private static MutableComponent buildHighlightedText(String source, String searchString, int highlightColor) {
+        String safeSource = source == null ? "" : source;
+        if (searchString == null || searchString.isEmpty()) {
+            return Component.literal(safeSource);
+        }
+
+        String lowerSource = safeSource.toLowerCase();
+        String lowerSearch = searchString.toLowerCase();
+
+        MutableComponent text = Component.empty();
+        int start = 0;
+        int index;
+
+        while ((index = lowerSource.indexOf(lowerSearch, start)) != -1) {
+            text.append(Component.literal(safeSource.substring(start, index)));
+            text.append(Component.literal(safeSource.substring(index, index + searchString.length()))
+                    .withStyle(style -> style.withColor(highlightColor)));
+            start = index + searchString.length();
+        }
+
+        text.append(Component.literal(safeSource.substring(start)));
+        return text;
+    }
+
+    /**
      * Builds a clickable button entry for a search result.
      *
      * @param result      rendered label text for the result
@@ -233,15 +273,15 @@ public class SearchWidget extends Screen {
      * @param resultIndex vertical slot index for button placement
      * @return configured result button
      */
-    private ButtonWidget buildSearchResultButton(Text result, Object element, int resultIndex) {
+    private Button buildSearchResultButton(Component result, Object element, int resultIndex) {
 
         var height = ModConstants.SMALL_SQUARED_BUTTON_SIZE;
 
-        return ButtonWidget.builder(
+        return Button.builder(
                         result,
-                        button -> this.resultSelected(element))
+                        _ -> this.resultSelected(element))
                 .size(ModConstants.BUTTON_WIDTH * 2, height)
-                .position(searchField.getX(), searchField.getY() + 5 + resultIndex * height)
+                .pos(searchField.getX(), searchField.getY() + 5 + resultIndex * height)
                 .build();
     }
 
@@ -255,92 +295,85 @@ public class SearchWidget extends Screen {
         if (onSearchResultSelected != null)
             onSearchResultSelected.apply(selectedElement);
 
-        close();
+        onClose();
     }
 
     /**
      * Handles key press events for the side panel. Handle ENTER key press when results are displayed. First element is
      * selected.
      *
-     * @param keyCode   The code of the key that was pressed
-     * @param scanCode  The scan code of the key that was pressed
-     * @param modifiers Any modifier keys that were held during the key press
+     * @param event the initiating key event
      * @return True if event was consumed
      */
     @Override
-    public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
+    public boolean keyPressed(KeyEvent event) {
+        int keyCode = event.key();
 
         if (keyCode == GLFW.GLFW_KEY_ENTER
                 && !searchResults.isEmpty()
-                && searchResults.get(0) instanceof ButtonWidget buttonWidget) {
+                && searchResults.getFirst() instanceof Button buttonWidget) {
 
-            buttonWidget.onPress();
+            buttonWidget.onPress(event);
             return true;
         }
 
-        return super.keyPressed(keyCode, scanCode, modifiers);
+        return super.keyPressed(event);
     }
 
     @Override
-    public boolean mouseClicked(double mouseX, double mouseY, int button) {
+    public boolean mouseClicked(MouseButtonEvent event, boolean doubleClick) {
+        double mouseX = event.x();
+        double mouseY = event.y();
 
         var clickOverButton = children().stream().anyMatch(child -> child.isMouseOver(mouseX, mouseY));
 
         if (clickOverButton)
-            return super.mouseClicked(mouseX, mouseY, button);
+            return super.mouseClicked(event, doubleClick);
 
         // Player clicked outside any button, close the search overlay
-        close();
+        onClose();
         return true;
-    }
-
-    /**
-     * Closes this overlay and restores the parent screen.
-     */
-    @Override
-    public void close() {
-
-        assert this.client != null;
-        this.client.setScreen(parent);
     }
 
     /**
      * Resizes the parent and overlay screens when the window size changes.
      *
-     * @param client current Minecraft client instance
      * @param width  new window width
      * @param height new window height
      */
     @Override
-    public void resize(MinecraftClient client, int width, int height) {
+    public void resize(int width, int height) {
 
-        if (parent != null) parent.resize(client, width, height);
+        if (parent != null) parent.resize(width, height);
 
-        super.resize(client, width, height);
+        super.resize(width, height);
     }
 
     /**
-     * Renders this widget as an overlay on top of the parent screen.
+     * Extracts this widget's render state as an overlay on top of the parent screen.
      *
      * @param context draw context
      * @param mouseX  mouse x position
      * @param mouseY  mouse y position
      * @param delta   frame delta time
      */
-    public void render(DrawContext context, int mouseX, int mouseY, float delta) {
+    @Override
+    public void extractRenderState(@NonNull GuiGraphicsExtractor context, int mouseX, int mouseY, float delta) {
 
         // Render this screen as an overlay - force mouse position to -1 so that mouse events don't interact
-        if (parent != null)
-            parent.render(context, -1, -1, delta);
+        if (parent != null) {
+            parent.extractModBackground(context);
+            parent.extractRenderState(context, -1, -1, delta);
+        }
 
         context.fill(0, 0, this.width, this.height, 0xAA000000);
 
-        super.render(context, mouseX, mouseY, delta);
+        super.extractRenderState(context, mouseX, mouseY, delta);
 
         for (var tooltipEntry : resultTooltips.entrySet()) {
             if (tooltipEntry.getKey().isMouseOver(mouseX, mouseY)) {
-                List<OrderedText> wrappedTooltip = textRenderer.wrapLines(tooltipEntry.getValue(), TOOLTIP_MAX_WIDTH);
-                context.drawTooltip(textRenderer, wrappedTooltip, HoveredTooltipPositioner.INSTANCE, mouseX, mouseY);
+                List<FormattedCharSequence> wrappedTooltip = font.split(tooltipEntry.getValue(), TOOLTIP_MAX_WIDTH);
+                context.setTooltipForNextFrame(font, wrappedTooltip, DefaultTooltipPositioner.INSTANCE, mouseX, mouseY, false);
                 break;
             }
         }
@@ -362,35 +395,6 @@ public class SearchWidget extends Screen {
      */
     public void setResultTooltipFunction(Function<Object, String> elementAsTooltip) {
         this.elementAsTooltip = elementAsTooltip;
-    }
-
-    /**
-     * Builds text where each occurrence of {@code searchString} in {@code source}
-     * is highlighted with the provided colour.
-     */
-    @SuppressWarnings("SameParameterValue")
-    private static MutableText buildHighlightedText(String source, String searchString, int highlightColor) {
-        String safeSource = source == null ? "" : source;
-        if (searchString == null || searchString.isEmpty()) {
-            return Text.literal(safeSource);
-        }
-
-        String lowerSource = safeSource.toLowerCase();
-        String lowerSearch = searchString.toLowerCase();
-
-        MutableText text = Text.empty();
-        int start = 0;
-        int index;
-
-        while ((index = lowerSource.indexOf(lowerSearch, start)) != -1) {
-            text.append(Text.literal(safeSource.substring(start, index)));
-            text.append(Text.literal(safeSource.substring(index, index + searchString.length()))
-                    .styled(style -> style.withColor(highlightColor)));
-            start = index + searchString.length();
-        }
-
-        text.append(Text.literal(safeSource.substring(start)));
-        return text;
     }
 
 }
