@@ -66,10 +66,16 @@ class MapScreenTest {
         List<MapLayerDefinition> dropdownLayers = MapLayerDropdownOptions.forDimension(dimension);
 
         assertEquals(List.of(layer), dropdownLayers);
-        assertSame(layer, dropdownLayers.get(0));
+        assertSame(layer, dropdownLayers.getFirst());
         assertNotSame(dimension.getMapLayers(), dropdownLayers);
     }
 
+    /**
+     * Creates a layer fixture with the supplied name.
+     *
+     * @param name The name to assign to the layer.
+     * @return A map layer definition for test setup.
+     */
     @SuppressWarnings("SameParameterValue")
     private static MapLayerDefinition layer(String name) {
 
